# magit-cli

./: Cargo.toml  README.md
src/: app.rs  git_helper.rs  main.rs  ui.rs
