[package]
name = "magit-cli"
version = "0.1.0"
authors = ["Seaborn Lee <seabornlee.cn@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
termion = "1.5"
crossterm = "0.20"
tui = { version = "0.16", default-features = false, features = ['crossterm'] }
argh = "0.1.5"